--- a/index.html
+++ b/index.html
@@ -486,12 +486,18 @@ footer{
 .contact-item i{
   font-size: 16px;
   opacity: .75;
+  transition: opacity .35s ease;
+
 }
 
 
 .contact-item:hover{
   border-color: rgba(255,255,255,0.42);
   transform: none;
+}
+
+  .contact-item:hover i{
+  opacity: 1;
 }
 
 
