--- a/index.html
+++ b/index.html
@@ -531,9 +531,13 @@ footer{
 }
 
 .contact-item:hover{
-  background: rgba(255,255,255,0.06); /* ilumina todo */
+  background: rgba(255,255,255,0.08); /* ilumina todo */
   border-color: rgba(255,255,255,0.45);
   transform: translateY(-1px);
+}
+
+  .contact-item:hover .contact-value{
+  color: #fff;
 }
 
   
