--- a/index.html
+++ b/index.html
@@ -725,24 +725,38 @@ footer{
 
 
 
-  /* ===== SKILLS BLOCK ENTRY ===== */
-
-.skills-block{
-  opacity: 0;
-  transform: translateY(14px);
-  animation: skillsBlockIn .9s cubic-bezier(.22,.61,.36,1) forwards;
+ .skills-line{
+  display: flex;
+  align-items: baseline;
+  gap: 14px;
+  margin-top: 14px;
+  max-width: 900px;
 }
 
-.skills-1{ animation-delay: .6s; }
-.skills-2{ animation-delay: .85s; }
-.skills-3{ animation-delay: 1.1s; }
-
-@keyframes skillsBlockIn{
-  to{
-    opacity: 1;
-    transform: translateY(0);
-  }
+/* título de cada línea */
+.skills-label{
+  font-size: 11px;
+  letter-spacing: .22em;
+  text-transform: uppercase;
+  color: var(--muted);
+  font-weight: 500;
+  white-space: nowrap;
 }
+
+/* separador editorial */
+.skills-sep{
+  opacity: .35;
+  font-weight: 300;
+}
+
+/* contenido */
+.skills-items{
+  font-size: 14px;
+  font-weight: 500;   /* ← aquí el nuevo grosor */
+  line-height: 1.7;
+  color: var(--white);
+}
+
 
 
   
