--- a/index.html
+++ b/index.html
@@ -677,13 +677,14 @@ footer{
 }
 
 
-/* ===== SKILLS – CLEAN 3 COLUMNS ===== */
+/* ===== SKILLS – ONE ROW / 3 COLUMNS ===== */
 
-.skills-columns{
+.skills-row{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 60px;
-  margin-top: 24px;
+  gap: 80px;
+  margin-top: 26px;
+  align-items: start;
 }
 
 /* Columna */
@@ -698,14 +699,14 @@ footer{
   letter-spacing: .22em;
   text-transform: uppercase;
   color: var(--muted);
-  margin-bottom: 18px;
+  margin-bottom: 20px;
 }
 
 /* Lista */
 .skills-list{
   list-style: none;
-  padding: 0;
   margin: 0;
+  padding: 0;
 
   display: flex;
   flex-direction: column;
@@ -721,7 +722,7 @@ footer{
   padding-left: 14px;
 }
 
-/* Punto sutil */
+/* Guion */
 .skills-list li::before{
   content: "—";
   position: absolute;
@@ -729,7 +730,7 @@ footer{
   color: rgba(255,255,255,0.35);
 }
 
-/* Skills principales */
+/* Core skills */
 .skills-list li.core{
   font-weight: 600;
 }
@@ -739,13 +740,12 @@ footer{
 }
 
 /* Responsive */
-@media (max-width: 900px){
-  .skills-columns{
+@media (max-width: 1024px){
+  .skills-row{
     grid-template-columns: 1fr;
-    gap: 40px;
+    gap: 42px;
   }
 }
-
 
 
 
