--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@ footer{
 
       <!-- COLUMNA 2 -->
       <div class="skills-col">
-        <h3 class="skills-title">Diseño gráfico y web</h3>
+        <h3 class="skills-title">Diseño gráfico</h3>
         <ul class="skills-list">
           <li>Animate</li>
           <li>Photoshop</li>
