--- a/index.html
+++ b/index.html
@@ -677,96 +677,129 @@ footer{
 }
 
 
-/* ===== SKILLS – PREMIUM ===== */
+/* ===== SKILLS – ULTRA PREMIUM ===== */
 
-.skills-row{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 72px;
-  margin-top: 20px;
+.skills-ultra{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:90px;
+  margin-top:20px;
 }
 
-.skills-col{
-  position: relative;
-  padding-top: 22px;
+.skills-block{
+  position:relative;
+  padding-top:28px;
 }
 
-/* Línea técnica superior */
-.skills-col::before{
+/* Línea técnica */
+.skills-block::before{
   content:"";
   position:absolute;
   top:0;
   left:0;
-  width:32px;
+  width:36px;
   height:1px;
-  background:rgba(255,255,255,0.45);
+  background:rgba(255,255,255,0.4);
 }
 
-/* Título */
-.skills-title{
-  font-size:11px;
-  letter-spacing:.26em;
+/* Eyebrow */
+.skills-eyebrow{
+  font-size:10px;
+  letter-spacing:.28em;
   text-transform:uppercase;
-  color:var(--muted);
-  margin-bottom:18px;
+  color:rgba(255,255,255,0.55);
+  display:block;
+  margin-bottom:6px;
 }
 
-/* Lista */
-.skills-list{
+/* Heading */
+.skills-heading{
+  font-size:20px;
+  font-weight:500;
+  margin-bottom:22px;
+}
+
+/* Core skills */
+.skills-core{
   list-style:none;
   display:flex;
   flex-direction:column;
   gap:12px;
+  margin-bottom:22px;
 }
 
-/* Item */
-.skills-list li{
-  font-size:13.5px;
-  color:rgba(255,255,255,0.92);
+.skills-core li{
+  font-size:14px;
+  font-weight:500;
   letter-spacing:.02em;
-  padding-left:22px;
+  padding-left:20px;
   position:relative;
-  font-weight:400;
-  transition: color .35s ease, transform .35s ease;
 }
 
-/* Punto técnico */
-.skills-list li::before{
+/* Punto sólido */
+.skills-core li::before{
   content:"";
   position:absolute;
   left:0;
   top:50%;
-  width:6px;
-  height:6px;
+  width:7px;
+  height:7px;
   border-radius:50%;
-  background:rgba(255,255,255,0.35);
-  transform:translateY(-50%);
-  transition:background .35s ease, transform .35s ease;
-}
-
-/* Hover elegante */
-.skills-list li:hover{
-  color:#fff;
-  transform:translateX(2px);
-}
-
-.skills-list li:hover::before{
   background:#fff;
-  transform:translateY(-50%) scale(1.2);
+  transform:translateY(-50%);
 }
 
-/* Entrada suave */
-#skills.active .skills-col{
+/* Secondary skills */
+.skills-secondary{
+  list-style:none;
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+}
+
+.skills-secondary li{
+  font-size:12.5px;
+  color:rgba(255,255,255,0.65);
+  letter-spacing:.02em;
+  padding-left:20px;
+  position:relative;
+}
+
+/* Punto vacío */
+.skills-secondary li::before{
+  content:"";
+  position:absolute;
+  left:1px;
+  top:50%;
+  width:5px;
+  height:5px;
+  border-radius:50%;
+  border:1px solid rgba(255,255,255,0.45);
+  transform:translateY(-50%);
+}
+
+/* Hover muy sutil */
+.skills-block li{
+  transition:transform .3s ease, color .3s ease;
+}
+
+.skills-block li:hover{
+  transform:translateX(2px);
+  color:#fff;
+}
+
+/* Entrada premium */
+#skills.active .skills-block{
   opacity:0;
-  transform:translateY(16px);
-  animation:skillsReveal .9s cubic-bezier(.22,.61,.36,1) forwards;
+  transform:translateY(20px);
+  animation:skillsUltraIn .9s cubic-bezier(.22,.61,.36,1) forwards;
 }
 
-#skills.active .skills-col:nth-child(1){ animation-delay:.15s; }
-#skills.active .skills-col:nth-child(2){ animation-delay:.3s; }
-#skills.active .skills-col:nth-child(3){ animation-delay:.45s; }
+#skills.active .skills-block:nth-child(1){animation-delay:.15s}
+#skills.active .skills-block:nth-child(2){animation-delay:.3s}
+#skills.active .skills-block:nth-child(3){animation-delay:.45s}
 
-@keyframes skillsReveal{
+@keyframes skillsUltraIn{
   to{
     opacity:1;
     transform:translateY(0);
@@ -774,12 +807,13 @@ footer{
 }
 
 /* Responsive */
-@media (max-width:1024px){
-  .skills-row{
+@media(max-width:1024px){
+  .skills-ultra{
     grid-template-columns:1fr;
-    gap:48px;
+    gap:56px;
   }
 }
+
 
 
 
