--- a/index.html
+++ b/index.html
@@ -756,6 +756,12 @@ footer{
   }
 }
 
+/* ===== SCROLL SOLO PARA CV ===== */
+#cv .content{
+  max-height: 100vh;
+  overflow-y: auto;
+  padding-bottom: 140px; /* para que no choque con el footer */
+}
 
   
 </style>
