--- a/index.html
+++ b/index.html
@@ -757,11 +757,18 @@ footer{
 }
 
 /* ===== SCROLL SOLO PARA CV ===== */
-#cv .content{
-  max-height: 100vh;
-  overflow-y: auto;
-  padding-bottom: 140px; /* para que no choque con el footer */
+#cv{
+  height: 100vh;              /* ocupa toda la pantalla */
+  position: fixed;
+  inset: 0;
 }
+
+#cv .content{
+  height: 100%;
+  overflow-y: auto;
+  padding-bottom: 160px;      /* espacio para footer */
+}
+
 
   
 </style>
