--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body{
   color:var(--white);
   overflow-y: auto;   /* ← permite scroll natural */
   overflow-x: hidden;
+  scrollbar-width: none;
 }
 
 /* ===== BACKGROUND ===== */
