--- a/index.html
+++ b/index.html
@@ -842,6 +842,16 @@ body::-webkit-scrollbar{
   display: none;              /* Chrome / Safari */
 }
 
+  /* ===== OCULTAR SCROLLBAR (SCROLL ACTIVO) ===== */
+body{
+  scrollbar-width: none;        /* Firefox */
+}
+
+body::-webkit-scrollbar{
+  display: none;                /* Chrome, Safari, Edge */
+}
+
+
   
 </style>
 </head>
