--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@ body{
 }
 
 body::-webkit-scrollbar{
-  display: none;                /* Chrome / Safari */
+  width: 0;
+  height: 0;
 }
+
 
 /* ===== BACKGROUND ===== */
 .bg-layer{
@@ -832,26 +834,8 @@ footer{
 .cv-3{ animation-delay: .8s; }
 .cv-4{ animation-delay: 1s; }
 
-  /* ===== OCULTAR SCROLLBAR ===== */
-body{
-  scrollbar-width: none;      /* Firefox */
-  -ms-overflow-style: none;   /* IE / Edge antiguo */
-}
-
-body::-webkit-scrollbar{
-  display: none;              /* Chrome / Safari */
-}
-
-  /* ===== OCULTAR SCROLLBAR (SCROLL ACTIVO) ===== */
-body{
-  scrollbar-width: none;        /* Firefox */
-}
-
-body::-webkit-scrollbar{
-  display: none;                /* Chrome, Safari, Edge */
-}
-
-
+ 
+ 
   
 </style>
 </head>
