--- a/index.html
+++ b/index.html
@@ -857,14 +857,13 @@ footer{
 .cv-content::before{
   content: "";
   position: absolute;
-  left: 23px;                 /* centra la línea con los markers */
-  top: 70px;                  /* arranca debajo del h2 */
+  left: 29px;   /* ✅ centro exacto del marker */
+  top: 70px;
   bottom: 0;
   width: 1px;
   background: rgba(255,255,255,0.22);
   pointer-events: none;
 }
-
  
  
   
