--- a/index.html
+++ b/index.html
@@ -809,6 +809,8 @@ footer{
   border-radius: 50%;
   background: #fff;
   margin-top: 6px;
+  justify-self: center;   /* ✅ CENTRO REAL DEL GRID */
+
 }
 
 /* Texto */
@@ -857,7 +859,7 @@ footer{
 .cv-content::before{
   content: "";
   position: absolute;
-  left: 29px;   /* ✅ centro exacto del marker */
+  left: 24px;   /* ✅ centro exacto del marker */
   top: 70px;
   bottom: 0;
   width: 1px;
