--- a/index.html
+++ b/index.html
@@ -853,7 +853,6 @@ footer{
 
 .cv-content{
   position: relative;
-  padding-left: 20px;   /* ← AJUSTA ESTE VALOR */
 
 }
 
@@ -861,7 +860,7 @@ footer{
 .cv-content::before{
   content: "";
   position: absolute;
-  left: calc(24px + 20px); /* centro columna + padding */
+  left: calc(24px); /* centro columna + padding */
   top: 70px;
   bottom: 0;
   width: 1px;
