--- a/index.html
+++ b/index.html
@@ -880,7 +880,10 @@ footer{
   pointer-events: none;
 }
  
- 
+ #cv .content{
+  margin-left: clamp(90px, 12vw, 170px); /* ⬅️ más a la izquierda */
+}
+
   
 </style>
 </head>
