--- a/index.html
+++ b/index.html
@@ -818,6 +818,14 @@ footer{
 
 }
 
+  .cv-block:first-of-type::before{
+  display: none;
+  height: 6px; /* centro del punto */
+
+}
+
+  
+
 
 .cv-marker{
   width: 12px;
