--- a/index.html
+++ b/index.html
@@ -811,6 +811,8 @@ footer{
   left: 14px;        /* ⬅️ dentro de la columna timeline */
   top: -6px;
   bottom: 0;
+    height: calc(100% - 18px);
+
   width: 1px;
   background: rgba(255,255,255,0.22);
   pointer-events: none;
