--- a/index.html
+++ b/index.html
@@ -810,6 +810,7 @@ footer{
   position: absolute;
   left: 14px;        /* ⬅️ dentro de la columna timeline */
   top: 250px;
+  bottom: 170px;       /* ⬅️ MISMO valor que padding-bottom */
   height: calc(100% - 370px);
   width: 1px;
   background: rgba(255,255,255,0.22);
